# txt2detection

./: .env.example  .env.markdown  .gitignore  README.md  pyproject.toml  requirements.txt  txt2detection.py
.github/workflows/: run-tests.yml
config/: detection_languages.yaml  logs.yaml
docs/: README.md
log_samples/: README.md
log_samples/amazon_web_services/: cloudtrail.json
log_samples/google_cloud_platform/: generic.json
tests/: README.md
tests/files/: CVE-2024-1212.txt  demo-sigma-rule.yml  lynx-ransomware.txt  sigma-rule-attack-flow.yml  sigma-rule-attack-ics.yml  sigma-rule-attack-mobile.yml  sigma-rule-deprecated.yml  sigma-rule-observables.yml
tests/manual-tests/: README.md  input-sigma-mode.md  input-text-mode.md
tests/src/: test_attack_flow.py  test_bundler.py  test_main_run_txt2detction.py  test_models.py  test_utils.py
txt2detection/: __init__.py  __main__.py  attack_flow.py  bundler.py  models.py  observables.py  openai.py  utils.py
txt2detection/ai_extractor/: __init__.py  base.py  openai.py  prompts.py  utils.py
